--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,125 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>مؤسسة التدريب — منصة تجريبية</title>
 
-  <!-- ملف CSS منفصل -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- Chart.js (مكتبة خارجية) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+
+  <style>
+    /* إضافات صغيرة خاصة بالقائمة المنسدلة والهامبرغر و overlay */
+    .mobile-toggle{
+      display:none;
+      position:fixed;
+      top:12px;
+      left:12px; /* لأن dir=rtl، زر الهامبرغر على اليسار يفتح الشريط من اليمين */
+      z-index:100;
+      background:transparent;
+      border:0;
+      font-size:22px;
+      padding:8px;
+      border-radius:8px;
+      cursor:pointer;
+    }
+    #sidebar-overlay{
+      display:none;
+      position:fixed;
+      inset:0;
+      background:rgba(0,0,0,0.35);
+      z-index:90;
+    }
+
+    /* القوائم الفرعية داخل الشريط الجانبي */
+    .nav .has-submenu > .submenu{
+      display:none;
+      margin-top:6px;
+      padding-right:8px;
+      padding-left:8px;
+    }
+    .nav .has-submenu.open > .submenu{
+      display:block;
+    }
+    .nav .submenu li{
+      list-style:none;
+      padding:8px 6px;
+      border-radius:6px;
+      cursor:pointer;
+      color:#334155;
+      font-weight:700;
+    }
+    .nav .submenu li:hover{
+      background:rgba(106,90,249,0.06);
+      color:#111827;
+    }
+
+    /* اجعل ايقونة السهم صغيرة */
+    .nav .has-submenu > button .caret{
+      font-size:12px;
+      margin-left:8px;
+      opacity:0.7;
+    }
+
+    /* استجابة: إظهار زر الهامبرغر على الشاشات الصغيرة */
+    @media (max-width:1000px){
+      .mobile-toggle{ display:inline-block; }
+    }
+  </style>
 </head>
 <body>
+  <!-- overlay لإغلاق الشريط الجانبي على المحمول -->
+  <div id="sidebar-overlay" onclick="closeSidebar()" aria-hidden="true"></div>
+
+  <!-- زر الهامبرغر (للهاتف) -->
+  <button class="mobile-toggle" aria-label="فتح القائمة" onclick="openSidebar()">☰</button>
+
   <div class="container">
     <!-- الشريط الجانبي -->
-    <aside id="sidebar" class="sidebar">
-      <div class="brand">مؤسسة التدريب — Demo</div>
-      <nav class="nav">
-        <button id="tab-dashboard" class="active" onclick="UI.showTab('dashboard')">لوحة القيادة</button>
-        <button id="tab-courses" onclick="UI.showTab('courses')">الدورات</button>
-        <button id="tab-classroom" onclick="UI.showTab('classroom')">الفصل المباشر</button>
-        <button id="tab-assess" onclick="UI.showTab('assessments')">الاختبارات</button>
-        <button id="tab-crm" onclick="UI.showTab('crm')">نظام المتدربين (CRM)</button>
-        <button id="tab-settings" onclick="UI.showTab('settings')">الإعدادات</button>
+    <aside id="sidebar" class="sidebar" aria-label="القائمة الجانبية">
+      <div class="brand" style="display:flex;justify-content:space-between;align-items:center">
+        <span>مؤسسة التدريب — Demo</span>
+        <!-- زر إغلاق سريع داخل الشريط على الهاتف -->
+        <button style="background:transparent;border:0;font-size:18px;cursor:pointer" onclick="closeSidebar()" aria-label="إغلاق القائمة">✕</button>
+      </div>
+
+      <nav class="nav" role="navigation" aria-label="التنقل">
+        <button onclick="onNavClick('dashboard', this)">لوحة القيادة</button>
+
+        <button onclick="onNavClick('courses', this)">الدورات</button>
+
+        <button onclick="onNavClick('classroom', this)">الفصل المباشر</button>
+
+        <!-- مثال على عنصر فيه قائمة فرعية -->
+        <div class="has-submenu" id="menu-assess">
+          <button onclick="toggleSubmenu('menu-assess')">
+            الاختبارات
+            <span class="caret">▾</span>
+          </button>
+          <ul class="submenu" aria-hidden="true">
+            <li onclick="onNavClick('assessments', this)">قائمة الاختبارات</li>
+            <li onclick="UI.openCreateTest && UI.openCreateTest()">إنشاء اختبار</li>
+            <li onclick="window.alert('وظيفة إضافية')">استيراد أسئلة</li>
+          </ul>
+        </div>
+
+        <button onclick="onNavClick('crm', this)">نظام المتدربين (CRM)</button>
+
+        <div class="has-submenu" id="menu-settings">
+          <button onclick="toggleSubmenu('menu-settings')">
+            الإعدادات
+            <span class="caret">▾</span>
+          </button>
+          <ul class="submenu" aria-hidden="true">
+            <li onclick="onNavClick('settings', this)">التكاملات</li>
+            <li onclick="window.alert('إعدادات الحساب')">الحساب</li>
+          </ul>
+        </div>
       </nav>
+
+      <div style="margin-top:auto">
+        <div class="note" style="font-size:13px;color:#6b7280">نسخة تجريبية — البيانات محفوظة محليًا فقط.</div>
+      </div>
     </aside>
 
     <!-- المحتوى الرئيسي -->
     <main class="main">
-
       <!-- لوحة القيادة -->
       <section id="dashboard" class="tab">
         <header class="header-row">
@@ -73,104 +168,86 @@
         </section>
       </section>
 
-      <!-- الدورات -->
-      <section id="courses" class="tab" hidden>
-        <header class="header-row">
-          <h2>الدورات</h2>
-          <button class="btn-primary" onclick="UI.openCreateCourse()">إنشاء دورة</button>
-        </header>
-
-        <div id="courses-list" class="courses"></div>
-      </section>
-
-      <!-- الفصل الافتراضي -->
-      <section id="classroom" class="tab" hidden>
-        <header class="header-row">
-          <h2>الفصل الافتراضي</h2>
-          <button class="btn-primary" onclick="UI.openSchedule()">جدولة جلسة</button>
-        </header>
-
-        <div class="card">
-          <table id="sessions-table">
-            <thead>
-              <tr><th>موضوع</th><th>تاريخ/وقت</th><th>دورة</th><th>إجراء</th></tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </section>
-
-      <!-- الاختبارات -->
-      <section id="assessments" class="tab" hidden>
-        <header class="header-row">
-          <h2>الاختبارات</h2>
-          <button class="btn-primary" onclick="UI.openCreateTest()">إنشاء اختبار</button>
-        </header>
-
-        <div id="tests-list"></div>
-      </section>
-
-      <!-- CRM -->
-      <section id="crm" class="tab" hidden>
-        <header class="header-row"><h2>نظام المتدربين (CRM)</h2></header>
-
-        <div class="card">
-          <strong>إضافة متدرب / جهة اتصال</strong>
-          <div class="row">
-            <input id="crm-name" placeholder="الاسم بالكامل" />
-            <input id="crm-email" placeholder="الإيميل" />
-          </div>
-
-          <div class="row" style="margin-top:8px;">
-            <input id="crm-phone" placeholder="الهاتف" />
-            <select id="crm-source">
-              <option value="website">الموقع</option>
-              <option value="ads">إعلان</option>
-            </select>
-          </div>
-
-          <div class="form-actions" style="margin-top:10px">
-            <button class="btn-ghost" onclick="CRM.exportCSV()">تصدير CSV</button>
-            <button class="btn-primary" onclick="CRM.addLead()">إضافة</button>
-          </div>
-        </div>
-
-        <div class="card">
-          <strong>قائمة المتدربين</strong>
-          <div class="table-wrapper" style="margin-top:10px">
-            <table>
-              <thead>
-                <tr><th>الاسم</th><th>إيميل</th><th>هاتف</th><th>مصدر</th><th>إجراءات</th></tr>
-              </thead>
-              <tbody id="leads-table"></tbody>
-            </table>
-          </div>
-        </div>
-      </section>
-
-      <!-- الإعدادات -->
-      <section id="settings" class="tab" hidden>
-        <header class="header-row"><h2>الإعدادات</h2></header>
-        <div class="card">
-          <strong>التكاملات</strong>
-          <ul>
-            <li>BaridiMob / ECCP — بوابة دفع البريد الجزائري</li>
-            <li>خادم وسيط لإدارة المدفوعات ورفع تقارير Proctoring</li>
-          </ul>
-        </div>
-      </section>
+      <!-- بقية التبويبات (الدورات، الفصل، الاختبارات، CRM، الإعدادات) كما في سابقك -->
+      <!-- ... (نفس المحتوى الذي تملكه) ... -->
 
     </main>
   </div>
 
-  <!-- مودال عام -->
-  <div id="modal" class="modal" style="display:none">
-    <div id="modal-content" class="modal-content"></div>
-  </div>
+  <!-- مودال -->
+  <div id="modal"><div id="modal-content"></div></div>
 
-  <!-- السكربتات المنفصلة -->
+  <!-- سكربتات المنطق العامة (تتوقع وجود js/app.js, js/payments.js, js/proctor.js) -->
   <script src="js/proctor.js"></script>
   <script src="js/payments.js"></script>
   <script src="js/app.js"></script>
+
+  <!-- سكربت صغير لإدارة الهامبرغر والقوائم الفرعية -->
+  <script>
+    // فتح الشريط الجانبي (mobile)
+    function openSidebar(){
+      const sb = document.getElementById('sidebar');
+      const overlay = document.getElementById('sidebar-overlay');
+      if(sb) sb.classList.add('open');
+      if(overlay) overlay.style.display = 'block';
+      document.body.style.overflow = 'hidden';
+    }
+    // غلق الشريط الجانبي (mobile)
+    function closeSidebar(){
+      const sb = document.getElementById('sidebar');
+      const overlay = document.getElementById('sidebar-overlay');
+      if(sb) sb.classList.remove('open');
+      if(overlay) overlay.style.display = 'none';
+      document.body.style.overflow = '';
+    }
+
+    // toggle submenu (by id of wrapper .has-submenu)
+    function toggleSubmenu(id){
+      const el = document.getElementById(id);
+      if(!el) return;
+      const isOpen = el.classList.contains('open');
+      // أغلق كل القوائم الفرعية الأخرى
+      document.querySelectorAll('.nav .has-submenu').forEach(h => {
+        if(h.id !== id) { h.classList.remove('open'); h.querySelector('.submenu')?.setAttribute('aria-hidden','true'); }
+      });
+      if(isOpen){
+        el.classList.remove('open');
+        el.querySelector('.submenu')?.setAttribute('aria-hidden','true');
+      } else {
+        el.classList.add('open');
+        el.querySelector('.submenu')?.setAttribute('aria-hidden','false');
+      }
+    }
+
+    // عندما تضغط عنصر القائمة، نريد إظهار التبويب المقابل ثم إغلاق السايدبار على المحمول
+    function onNavClick(tabId, btn){
+      if(window.UI && UI.showTab) UI.showTab(tabId);
+      // ضع تأثير تمييز على الزر
+      document.querySelectorAll('.nav button').forEach(b=>b.classList.remove('active'));
+      if(btn && btn.tagName === 'BUTTON') btn.classList.add('active');
+      // اغلاق الشريط الجانبي اذا كان مفتوح (على المحمول)
+      if(window.innerWidth <= 1000) closeSidebar();
+    }
+
+    // إغلاق أي قائمة فرعية عند النقر خارجها
+    document.addEventListener('click', function(e){
+      const insideNav = e.target.closest('.nav');
+      if(!insideNav){
+        document.querySelectorAll('.nav .has-submenu').forEach(h => { h.classList.remove('open'); h.querySelector('.submenu')?.setAttribute('aria-hidden','true'); });
+      }
+    });
+
+    // دعم مفتاح Escape لإغلاق السايدبار أو المودال
+    document.addEventListener('keydown', function(e){
+      if(e.key === 'Escape'){
+        closeSidebar();
+        const modal = document.getElementById('modal');
+        if(modal) modal.style.display = 'none';
+      }
+    });
+
+    // تهيئة: اغلاق overlay افتراضياً
+    document.getElementById('sidebar-overlay').style.display = 'none';
+  </script>
 </body>
 </html>
